tests/baselines/reference/cloduleWithDuplicateMember2.errors.txt
cloduleWithDuplicateMember2.ts(7,16): error TS2300: Duplicate identifier 'x'.
cloduleWithDuplicateMember2.ts(10,21): error TS2300: Duplicate identifier 'x'.


==== cloduleWithDuplicateMember2.ts (2 errors) ====
    class C {
        set x(y) { }
        static set y(z) { }
    }
    
    module C {
        export var x = 1;
                   ~
!!! error TS2300: Duplicate identifier 'x'.
    }
    module C {
        export function x() { }
                        ~
!!! error TS2300: Duplicate identifier 'x'.
    }